
Sat Oct  2 21:20:50 PDT 1999
(Raster)

add $EBIN as env variable.. need for scripts.. :)

-------------------------------------------------------------------------------

Sun Oct  3 00:45:11 PDT 1999
(Raster)

get textclas ipc right....

-------------------------------------------------------------------------------

Sun Oct  3 01:11:42 PDT 1999
(Raster)

and save snapsh when the ipc is called....

-------------------------------------------------------------------------------

Sun Oct  3 11:44:39 PDT 1999
(Mandrake)

if the focus changes, we crush any open but un-stuck windows to avoid any
bizarre problems this may cause later

-------------------------------------------------------------------------------

Sun Oct  3 11:45:28 PDT 1999
(Raster)

change menu scroll dist to 4 pixels

-------------------------------------------------------------------------------

Sun Oct  3 12:03:22 PDT 1999
(Raster)

bad theme dialog added so people knwo they chose a bad theme...

-------------------------------------------------------------------------------

Sun Oct  3 12:37:15 PDT 1999
(Mandrake)

okay, here's the way the menu focus fix SHOUDL have gone

incidentally, we now have a proper README, INSTALL, and FAQ file in the e/
directory

-------------------------------------------------------------------------------

Sun Oct  3 13:09:10 PDT 1999
(Raster)

add soem smarts to icon imges to limit the size to the iconox size... :)

-------------------------------------------------------------------------------

Sun Oct  3 13:18:30 PDT 1999
(Mandrake)

patch to have only one dialog box for logging out, courtesy of
"Daniel Erat" <erat@cats.ucsc.edu>

-------------------------------------------------------------------------------

Sun Oct  3 14:43:23 PDT 1999
(Raster)

have the imagelcass pixmap freere read the pixmap id right.

-------------------------------------------------------------------------------

Sun Oct  3 14:47:51 PDT 1999
(Raster)

read pixmap id like all other id's